<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CharacterListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/characterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruslan_display"
            android:text="@string/character"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/strength"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/characterInfo"
            app:layout_constraintEnd_toStartOf="@+id/dexterity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/strengthTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/strength_text"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/strengthValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/strengthBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/strengthTextView" />

                <TextView
                    android:id="@+id/strengthBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+3"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/strengthValue"
                    app:layout_constraintTop_toBottomOf="@id/strengthTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dexterity"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/physique"
            app:layout_constraintStart_toEndOf="@id/strength"
            app:layout_constraintTop_toBottomOf="@id/characterName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dexterityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/dexterity_text"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dexterityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/dexterityBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dexterityTextView" />

                <TextView
                    android:id="@+id/dexterityBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/dexterityValue"
                    app:layout_constraintTop_toBottomOf="@id/dexterityTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/physique"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dexterity"
            app:layout_constraintTop_toBottomOf="@id/characterName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/physiqueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/physique_text"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/physiqueValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/physiqueBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/physiqueTextView" />

                <TextView
                    android:id="@+id/physiqueBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+4"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/physiqueValue"
                    app:layout_constraintTop_toBottomOf="@id/physiqueTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/characterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintBottom_toTopOf="@id/intelligence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/strength">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:src="@drawable/char_list_icon" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/intelligence"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@+id/wisdom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/intelligenceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/intelligence_text"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/intelligenceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/intelligenceBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/intelligenceTextView" />

                <TextView
                    android:id="@+id/intelligenceBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/intelligenceValue"
                    app:layout_constraintTop_toBottomOf="@id/intelligenceTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wisdom"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/charisma"
            app:layout_constraintStart_toEndOf="@id/intelligence"
            app:layout_constraintTop_toBottomOf="@id/characterInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/wisdomTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/wisdom_text"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wisdomValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/wisdomBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wisdomTextView" />

                <TextView
                    android:id="@+id/wisdomBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/wisdomValue"
                    app:layout_constraintTop_toBottomOf="@id/wisdomTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/charisma"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/wisdom"
            app:layout_constraintTop_toBottomOf="@id/characterInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/charismaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/charisma_text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/charismaValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/charismaBonus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/charismaTextView" />

                <TextView
                    android:id="@+id/charismaBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+2"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/charismaValue"
                    app:layout_constraintTop_toBottomOf="@id/charismaTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>